# usbutils

./: .clang-format  .codespellrc  .cvsignore  .editorconfig  .gitignore  .gitmodules  .travis.yml  .yamllint  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  REUSE.toml  Singed-Of-By.txt  aclocal.m4  autogen.sh  bom.spdx  build-dev.ini  config.h.in  configure  configure.ac  configure.in  desc-defs.c  desc-defs.h  desc-dump.c  desc-dump.h  desc-file.c  desc-file.h  devtree.c  devtree.h  do_release  justfile  list.h  lsusb-t.c  lsusb.8  lsusb.8.in  lsusb.c  (+32 more)
.github/: dependabot.yml
.github/actions/setup-alpine/: action.yml
.github/actions/setup-archlinux/: action.yml
.github/actions/setup-debian/: action.yml
.github/actions/setup-fedora/: action.yml
.github/actions/setup-ubuntu/: action.yml
.github/cross-files/: arch-cross.ini  ubuntu-cross.ini
.github/workflows/: clang-format.yml  codeql.yml  codespell.yml  main.yml  reuse.yml  shellcheck.yml
LICENSES/: GPL-3.0.txt  LicenseRef-MIT-Trans-Rights.txt
ccan/container_of/: container_of.h
ccan/list/: list.h
lsusb/: desc-dump.c  list.h  lsusb-t.c  names.c
man/: lsusb.8  usbreset.1
tests/: lsusb-D.brat  lsusb-d.brat  lsusb-h.brat  lsusb-s.brat  lsusb-t.brat  lsusb.brat  lsusb.py-C.brat  lsusb.py-I.brat  lsusb.py-U.brat  lsusb.py-c.brat  lsusb.py-e.brat  lsusb.py-f.brat  lsusb.py-h.brat  lsusb.py-i.brat  lsusb.py-u.brat  lsusb.py-w.brat  lsusb.py.brat  run  usb-devices.brat
tests/brat/: LICENSE.md
tests/brat/lib/brat/: _init.sh  _unhandled.sh  brat.sh  eval.sh  match.awk  plan-lines.awk  plan-names.awk  preprocess.awk  rewrite-paths.awk  tap-format-plain.awk  tap-format-pretty.awk  tap-status.awk  terminal.awk  test.sh  wcwidth.awk
tests/brat/libexec/: brat--tap-format  brat-plan-build  brat-plan-run  brat-test--preprocess  brat-test-plan  brat-test-run
usbhid-dump/: .gitignore  Makefile.am  NEWS  README.md  bootstrap  configure.ac  dev.c  dev_list.c  iface_list.c  meson.build  usbhid-dump.c
usbhid-dump/auxdir/: .gitignore
usbhid-dump/doc/: Makefile.am  usbhid-dump.8
usbhid-dump/include/: Makefile.am
usbhid-dump/include/hid_dump/: Makefile.am  iface.h  libusb.h  str.h
usbhid-dump/include/uhd/: Makefile.am  dev.h  dev_list.h  iface.h  iface_list.h  libusb.h  misc.h  str.h
usbhid-dump/include/usbhid_dump/: Makefile.am  iface.h  libusb.h  str.h
usbhid-dump/lib/: .gitignore  Makefile.am  dev.c  dev_list.c  iface.c  iface_list.c  libusb.c  str.c
usbhid-dump/m4/: .gitignore
usbhid-dump/src/: .gitignore  Makefile.am  dev.c  dev.h  dev_list.c  dev_list.h  hid-dump.c  iface.c  iface.h  iface_list.c  iface_list.h  usbhid-dump.c
